deployments/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: anc-portal
  labels:
    app.kubernetes.io/part-of: anc-portal
