deployments/k8s/base/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anc-portal-api
  namespace: anc-portal
  labels:
    app.kubernetes.io/name: anc-portal-api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: anc-portal
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: anc-portal-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: anc-portal-api
        app.kubernetes.io/component: api
        app.kubernetes.io/part-of: anc-portal
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 15
      containers:
        - name: api
          # ⚠️  เปลี่ยน image ตาม registry จริง
          image: ghcr.io/onizukazaza/anc-portal-be-fake:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 20000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: false
